# marmot

./: .gitignore  LICENSE  README.md  marmot.nginx.conf  pyproject.toml  setup.cfg
docker/: compose.yml
docker/marmot/: Dockerfile  build.sh  docker-entrypoint.sh
docker/nginx/: generate-test-certificate-chain.py  marmot.conf
docker/redis/: redis.conf
example/: script.sh
marmot/: __init__.py  config.py  listen.py  relay.py  server.py  whistle.py
marmot/helper/: __init__.py  api.py  authorization.py  backend.py  config.py  crypto.py  event_source.py  logging.py  secret_provider.py
scripts/: generate-test-cert-chain.py  generate-test-config.py  marmot-listener-rocketchat.py  marmot-listener-slack.py  marmot-listener-teams.py  marmot-whistler-syslog.py
