[metadata]
url = https://github.com/koromodako/marmot
author = koromodako
author_email = koromodako@gmail.com
name = marmot
description = Marmot is a security-oriented server-based notification system including a pub/sub client
long_description = file: README.md, LICENSE
keywords = marmot, api, cli, asyncio
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Security
    Topic :: Utilities

[options]
packages = find:
install_requires =
    rich<13.0.0
    redis<5.0.0
    aiohttp<4.0.0
    aiohttp-sse<3.0.0
    cryptography<40.0.0

[options.entry_points]
console_scripts =
    marmot-config = marmot.config:app
    marmot-server = marmot.server:app
    marmot-listen = marmot.listen:app
    marmot-whistle = marmot.whistle:app
